@@ -1,3 +1,12 @@
+2005-11-12  Benoît Dejean  <benoit@placenet.org>
+
+	* linux-proc.c: #if 0 dead code.
+	* load-graph.c: (load_graph_load_config): Fixed format string.
+	* main.c: removed PANEL_APPLET_BONOBO_FACTORY trailing ;
+
+	Patch from Kjartan Maraas <kmaraas@gnome.org>
+	See #321266.
+
 2005-09-28  Ryan Lortie  <desrt@desrt.ca>
 
 	* docs/Makefile.am: add DOC_FIGURES list to get .png's into the
